--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,5 @@
 /DeathBoard/x64
 /DeathBoard/Release
 /.vs
-/sdk/bdx_sdk
-/DeathBoard_BDXC
-/DeathBoard_BDXC//Release
-/DeathBoard_BDXC/x64
+/sdk
+/Release
