--- a/DeathBoard/DeathBoard.vcxproj.filters
+++ b/DeathBoard/DeathBoard.vcxproj.filters
@@ -34,6 +34,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Library Include="..\sdk\bdx_sdk\LIGHTBASE.lib" />
+    <Library Include="..\sdk\LIGHTBASE.lib" />
   </ItemGroup>
 </Project>
