--- a/DeathBoard_BDX/DeathBoard_BDX.vcxproj
+++ b/DeathBoard_BDX/DeathBoard_BDX.vcxproj
@@ -172,7 +172,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Library Include="..\sdk\LIGHTBASE.lib" />
+    <Library Include="..\..\dev0711\LIGHTBASE.lib" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
