--- a/DeathBoard_LiteLoader/DeathBoard_LiteLoader.vcxproj
+++ b/DeathBoard_LiteLoader/DeathBoard_LiteLoader.vcxproj
@@ -84,7 +84,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(SolutionDir)..\LiteLoaderKit\headers;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)..\LiteLoader\headers;$(IncludePath)</IncludePath>
     <LibraryPath>$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -172,7 +172,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Library Include="..\..\LiteLoaderKit\headers\LiteLoader.lib" />
+    <Library Include="..\..\LiteLoader\x64\Release\LiteLoader.lib" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
